[package]
name = "supply-chain"
version = "0.1.0"
authors = ["Alex <rupta3@gmail.com>"]

[dependencies]
exonum = "0.3"
exonum-configuration = "0.3"
env_logger = "0.3"
clap = {version="2.14", features=["unstable"]}
time = "0.1"
rand = "0.3"
log = "0.3"
byteorder = "0.5"
serde = "1.0.0"
serde_derive = "1.0.0"
jsonway = "1.0"
iron = "0.5.1"
bodyparser = "0.7.0"
router = "0.5.1"
headers = "0.1.0"
hyper = "0.10.4"
cookie = "0.6.0"
tempdir = "0.3.5"
params = "0.6.0"
uuid = "0.4"